istio-network/grafana/Gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: observability
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - observability/grafana.mydomain.org
      port:
        name: http
        number: 80
        protocol: HTTP
