istio-network/grafana/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: observability
spec:
  gateways:
    - grafana-gateway
  hosts:
    - grafana.local.vm
  http:
    - route:
        - destination:
            host: service-logging-grafana.observability.svc.cluster.local
            port:
              number: 80
